[package]
name = "kasplex-reth-txpool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
kasplex-reth-chainspec = { path = "../chainspec" }
kasplex-reth-tx-mapping = { path = "../tx_mapping" }
alloy-primitives = { workspace = true }
alloy-consensus = { workspace = true }
reth = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-primitives" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-primitives-traits" }
reth-provider = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-provider" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.10.1", package = "reth-transaction-pool" }
tracing = { workspace = true }

