[package]
name = "kasplex-reth-txpool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
kasplex-reth-chainspec = { workspace = true }
kasplex-reth-tx-mapping = { workspace = true }
alloy-primitives = { workspace = true }
alloy-consensus = { workspace = true }
reth = { workspace = true }
reth-primitives = { workspace = true }
reth-primitives-traits = { workspace = true }
reth-provider = { workspace = true }
reth-transaction-pool = { workspace = true }
tracing = { workspace = true }

